# mavlink-fast-switch

./: .gitmodules  CMakeLists.txt  README.md  config.c  config.h  config.yaml  endpoint.c  endpoint.h  main.c  mavlink-fast-switch@.service.cmake  mavlink_dialect.h  mavlink_dialect.h.in
